# jupyter-aichat

./: LICENSE  README.rst  example.ipynb  mypy.ini  pyproject.toml
src/jupyter_aichat/: __init__.py  aichat_magic.py  api_types.py  authentication.py  client.py  output.py  schedule.py  tokens.py
src/jupyter_aichat/data/: account_and_key.md  authentication_note.md  commands.md  help.md  help_assistant_system_message.md  internals.md  keyring_not_installed.md  keyring_tip.md  load_ipython_extension.md  pricing.md
tests/: assertion.py  conftest.py  test_aichat_magic.py  test_client.py  test_schedule.py  test_tokens.py
tests/cassettes/test_client/: test_say_and_listen_records_transmissions.yaml
