[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jupyter_aichat"
authors = [{name = "Antti Kaihola", email = "13725+akaihola@users.noreply.github.com"}]
readme = "README.rst"
dynamic = ["version", "description"]
dependencies = ["IPython", "openai"]

[project.urls]
Home = "https://github.com/akaihola/jupyter_aichat"
